<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labellevelcleared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/level_cleared"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labellevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_level"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/buttonquitgame"
            style="android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quit_game" />

        <Button
            android:id="@+id/buttoncontinuegame"
            style="android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continue_game" />
    </LinearLayout>

</LinearLayout>