<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelgameover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/layoutHighscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/labelhighscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_highscore"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/labelname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonstartgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonreturnmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnmainscreen" />
    
    

</LinearLayout>
